2010-08-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xyzformat.cpp (OpenBabel): Add parsing of 5th column
	as partial charge -- supported by Jmol and others.

2010-08-18 Tim Vandermeersch

	* include/openbabel/isomorphism.h, src/isomorphism.cpp: Use VF2
	algortihm for finding isomorphisms and set this as default algorithm.
	The class performes good enough for general purpose now and is
	comparable in speed with the current smarts matching algortihm.

	* include/openbabel/query.h, src/query.cpp: Make sure aromaticity is
	handled correctly.

	* test/automorphismtest.cpp, test/isomorphismtest.cpp: Add some more
	tests.

2010-08-16 Chris Morley

	* include/openbabel/math/vector3.h,src/math/vector3.cpp: add new
	function, Point2Line()

	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi: mods
	to make help file local, add java bindings. Version 2.3.0rc

	* doc/OpenBabelGUI.html, windows-vc2008/Distribution/ToolsPrograms.txt,
      src/ops/xout.cpp,src/ops/partialcharges.cpp: documentation updates

2010-08-16 Noel O'Boyle

	* include/openbabel/math/vector3.h: The components of a vector3 were
	unaccessible from Python, so I've added GetX(), GetY() and GetZ(). The
	exisintg x() method returns a reference to _vx (i.e. a pointer) and so
	couldn't be used from Python.

2010-08-13 Chris Morley

	* tools/obabel.cpp: by its design obabel cannot use multiple
	concatenated single-character options. Ensure single ones with
	an unregistered number of parameters work correctly.

	* src/formats/fastsearchformat.cpp: extra error handling

2010-08-13 Chris Morley

	* src/formats/inchiformat.cpp(ReadMolecule):Use GetStructFromINCHI
	and not GetStructFromStdINCHI so can read both standard and
	non-standard InChIs. Make error handling more robust.

2010-08-13 Noel O'Boyle

	* src/mol.cpp: HasHydrogens() never returned True as the flag was
	being cleared in AddHydrogens(). Reported by Alex Henderson on
	openbabel-devel. Now fixed.

2010-08-13 Noel O'Boyle
